# eca-lib

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  WHITEPAPERr.md  index.md  white_paper.md
eca/: __init__.py  models.py  orchestrator.py  workspace.py
eca/adapters/: __init__.py  base.py  json_adapter.py
eca/database/: schema.py
eca/memory/: rules_loader.py  types.py  utils.py
eca/prompts/: meta_prompt_template_en.txt  meta_prompt_template_pt_BR.txt
examples/: 01_cognitive_workspace_simulation.py  01_fiscal_agent_example.py  02_chatbot_with_memory_example.py
examples/database/: interaction_log.json  memories.json  personas.json
examples/workspaces/: user_sessions.json
