[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eca-lib"
version = "0.1.0"
authors = [
  { name="coagentis", email="contato@coagentis.com.br" },
]
description = "Uma biblioteca Python para implementar a arquitetura de Engenharia de Contexto Aumentada (ECA)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coagentis/eca-lib"
"Bug Tracker" = "https://github.com/coagentis/eca-lib/issues"